# shopping-cart-assistant

./: .gitignore  CMakeLists.txt  CMakePreBuild.sh  README.md
data/: config.json  detectnet.service
data/ssd-tfm/: labels.txt
docs/: CREATE_HOTSPOT.md  INSTALL_CMAKE.md  INSTALL_PISTACHE-API-REST.md
python/: CMakeLists.txt
python/bindings/: PyDepthNet.cpp  PyDetectNet.cpp  PyImageNet.cpp  PyPoseNet.cpp  PySegNet.cpp
python/examples/: README.md  tts.py
python/training/detection/ssd/vision/utils/: box_utils.py
src/: CMakeLists.txt
src/detectnet/: CMakeLists.txt  detectnet.cpp
src/detectnet/headers/: ConfigFile.h  ImageProcessor.h  JetsonEndpoint.h  Ocr.h  Streamer.h  Tts.h
src/detectnet/sources/: ConfigFile.cpp  ImageProcessor.cpp  JetsonEndpoint.cpp  Ocr.cpp  Streamer.cpp  Tts.cpp
tools/camera-capture/: CMakeLists.txt
utils/: CMakeLists.txt  commandLine.cpp  commandLine.h  json.hpp
utils/codec/: gstDecoder.cpp
utils/cuda/: FindCUDA.cmake
utils/python/: CMakeLists.txt
utils/video/: videoOptions.cpp
